responsive checkout updated

--- a/sources/css/checkout.css
+++ b/sources/css/checkout.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background-image: url(/images/farmbg.jpg);
+    background-image: url(/images/bg.jpg);
     font-family:arial;
     font-size:17px;
     padding:8px;
