--- a/static/sources/css/product2.css
+++ b/static/sources/css/product2.css
@@ -9,7 +9,7 @@ html {
     padding: 0px;
 }
 body {
-    background-image: url("./imagess/farmbg.jpg");    
+    background-image: url("./images/farmbg.jpg");
     margin:0px;
     padding: 0px;
     font-family: 'montserrat','sans-serif';
